@@ -49,8 +49,8 @@
 
 #define GP_MODULE "PTP2"
 
-#define USB-TIMEOUT 8000
-#define USB-TIMEOUT-CAPTURE 20000
+#define USB_TIMEOUT 8000
+#define USB_TIMEOUT_CAPTURE 20000
 
 #define CPR(context,result) {short r=(result); if (r!=PTP_RC_OK) {report_result ((context), r); return (translate_ptp_result (r));}}
 
@@ -516,7 +516,7 @@ camera_abilities (CameraAbilitiesList *list)
 	memset(&a,0, sizeof(a));
 	for (i = 0; models[i].model; i++) {
 		strcpy (a.model, models[i].model);
-		a.status = GP_DRIVER_STATUS_TESTING;
+		a.status = GP_DRIVER_STATUS_PRODUCTION;
 		a.port   = GP_PORT_USB;
 		a.speed[0] = 0;
 		a.usb_vendor = models[i].usb_vendor;
@@ -642,7 +642,7 @@ camera_capture (Camera *camera, CameraCaptureType type, CameraFilePath *path,
 	 * few seconds. moving down the code. (kil3r)
 	 */
 	CPR(context,ptp_initiatecapture(&camera->pl->params, 0x00000000, 0x00000000));
-	CR (gp_port_set_timeout (camera->port, USB-TIMEOUT-CAPTURE));
+	CR (gp_port_set_timeout (camera->port, USB_TIMEOUT_CAPTURE));
 	while (ptp_usb_event_wait (&camera->pl->params, &event)!=PTP_RC_OK);
 	if (event.Code==PTP_EC_ObjectAdded) {
 		while (ptp_usb_event_wait (&camera->pl->params, &event)!=PTP_RC_OK);
@@ -650,7 +650,7 @@ camera_capture (Camera *camera, CameraCaptureType type, CameraFilePath *path,
 			return GP_OK;
 		}
 	} 
-	CR (gp_port_set_timeout (camera->port, USB-TIMEOUT));
+	CR (gp_port_set_timeout (camera->port, USB_TIMEOUT));
 
 	/* we're not going to set path, ptp does not use paths anyway ;) */
 	return GP_ERROR;
@@ -1309,7 +1309,7 @@ camera_init (Camera *camera, GPContext *context)
 	/* On large fiels (over 50M) deletion takes over 3 seconds,
 	 * waiting for event after capture may take some time also
 	 */
-	CR (gp_port_set_timeout (camera->port, USB-TIMEOUT));
+	CR (gp_port_set_timeout (camera->port, USB_TIMEOUT));
 	/* do we configure port ???*/
 #if 0	
 	/* Configure the port */
